@@ -13,6 +13,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.TestPropertySource;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.*;
@@ -45,7 +47,7 @@ class ShopUnitServiceIntegrationTest {
         offer1.setParentId(category2.getId());
         offer2.setParentId(category2.getId());
 
-        shopUnitService.save(new ShopUnitImportRequest(List.of(category1, category2, offer1, offer2), "2022-05-28T21:12:01.000Z"));
+        shopUnitService.save(new ShopUnitImportRequest(Arrays.asList(category1, category2, offer1, offer2), "2022-05-28T21:12:01.000Z"));
 
         System.out.println(shopUnitService.get(category2.getId()));
 
